--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "bulma": "0.7.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
+    "redux-devtools": "^3.5.0",
     "typescript": "3.3.3"
   },
   "scripts": {
