--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "main": "src/index.js",
   "dependencies": {
     "bulma": "0.7.5",
+    "node-sass": "^4.13.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.2.0",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "redux-devtools": "^3.5.0",
